Make comments collapsed by default. Show collapsed comments when a new comment is started on the same line. Fix text selection.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,9 +19,6 @@ pre {
     border-radius: inherit;
     color: inherit;
     overflow: hidden;
-
-    &::selection, ::selection {text-shadow: none;}
-    &::-moz-selection, ::-moz-selection {text-shadow: none;}
 }
 p {line-height: 1.6em;}
 code {
@@ -64,6 +61,12 @@ code {
             .fa-flask {color: #4383c1;}
         }
     }
+}
+
+.avatar img {
+    width: 100%;
+    height: 100%;
+    border-radius: .25em;
 }
 
 .button-primary {
@@ -149,6 +152,15 @@ footer {
 .pull-right {float: right;}
 
 .line-comments {
+    .line-content-collapsed {
+        padding: 3px 6px;
+
+        .avatar {
+            width: 24px;
+            height: 24px;
+            margin-right: 3px;
+        }
+    }
     .line-content {
         padding: 3px 6px;
 
@@ -156,12 +168,6 @@ footer {
             width: 48px;
             height: 48px;
             margin-right: 6px;
-
-            img {
-                width: 100%;
-                height: 100%;
-                border-radius: .25em;
-            }
         }
     }
     .line-comment {
